--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ p {
 }
 
 #container {
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .commentlist {
